--- a/public/kanbas/index.css
+++ b/public/kanbas/index.css
@@ -25,3 +25,52 @@
   border: none;
   padding-left: 0;
 }
+
+.list-group-item-courses {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+hr {
+  margin: 0;
+  padding: 0;
+}
+.kanbas-nav-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(1.1);
+  transition: visibility 0s linear 0.3s, opacity 0.3s 0s, transform 0.3s;
+  z-index: 3;
+  border: 4px solid grey;
+}
+.kanbas-nav-popup:target {
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+  transition: visibility 0s linear 0s, opacity 0.3s 0s, transform 0.3s;
+}
+.course-nav-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(1.1);
+  transition: visibility 0s linear 0.3s, opacity 0.3s 0s, transform 0.3s;
+  z-index: 3;
+  border: 4px solid grey;
+}
+.course-nav-popup:target {
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+  transition: visibility 0s linear 0s, opacity 0.3s 0s, transform 0.3s;
+}
