--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.kanbas-nav {
+  background-color: black;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.kanbas-nav-a {
+  color: white;
+  text-decoration: none;
+}
+.account-nav-a {
+  color: red;
+  text-decoration: none;
+}
+.account-nav-a:hover {
+  color: red;
+}
+.kanbas-nav-a:hover {
+  color: white;
+}
+.list-group-item.active {
+  z-index: 2;
+  border: none;
+  background-color: white;
+}
+.list-group-item {
+  border: none;
+  padding-left: 0;
+  border-radius: 0;
+}
+.list-group {
+  border-radius: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list-group-item-courses {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+hr {
+  margin: 0;
+  padding: 0;
+}
+.kanbas-nav-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(1.1);
+  transition: visibility 0s linear 0.3s, opacity 0.3s 0s, transform 0.3s;
+  z-index: 3;
+  border: 4px solid grey;
+}
+.kanbas-nav-popup:target {
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+  transition: visibility 0s linear 0s, opacity 0.3s 0s, transform 0.3s;
+}
+.course-nav-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(1.1);
+  transition: visibility 0s linear 0.3s, opacity 0.3s 0s, transform 0.3s;
+  z-index: 3;
+  border: 4px solid grey;
+}
+.course-nav-popup:target {
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+  transition: visibility 0s linear 0s, opacity 0.3s 0s, transform 0.3s;
 }
